# Study

ZIS/lab-11/src/main/java/: FileCipher.java  FileHelper.java  ICipher.java
ZIS/lab-11/temp/: encrypted_AES.txt  encrypted_BLOWFISH.txt
ZIS/lab-12/: pom.xml
ZIS/lab-12/BouncyCastle/src/main/java/: EncryptionKeyProvider.java
ZIS/lab-12/BouncyCastle/src/test/java/: BouncyCastleTests.java
ZIS/lab-12/BouncyCastle/temp/: encrypted_DES.txt  source_DES.txt
ZIS/lab-12/CryptoPp/: main.cpp
ZIS/lab-12/src/main/java/: BouncyCastleCipher.java  StringCipher.java
ZIS/lab-12/temp/: encrypted_GOST-28147.txt
ZIS/lab-13/CryptoPp/: CMakeLists.txt
ZIS/lab-14/Sodium/: CMakeLists.txt  main.cpp
ZIS/lab-15/RsaAlgorithm/: pom.xml
ZIS/lab-15/RsaAlgorithm/src/main/java/: IMessageCipher.java  RsaAlgorithm.java  RsaMessageCipher.java
ZIS/lab-15/RsaAlgorithm/src/test/java/: RsaMessageCipherTests.java
ZIS/lab-16/HashFunctions/: pom.xml
ZIS/lab-16/HashFunctions/files/: 2400kb.txt  800kb.txt
ZIS/lab-16/HashFunctions/src/main/java/: Hasher.java
ZIS/lab-16/HashFunctions/src/test/java/: HasherTests.java
ZIS/lab-17/DigitalSigner/files/: example.xml
ZIS/lab-17/DigitalSigner/src/main/java/: ElGamalDigitalSigner.java  ElGamalKeyProvider.java  ElGamalSignatureAlgorithm.java  FileSigner.java  IContentSigner.java  IDigitalSigner.java  IHashProvider.java  IKeyProvider.java  RsaDigitalSigner.java  RsaKeyProvider.java  SHA256HashProvider.java  StringSigner.java
ZIS/lab-17/DigitalSigner/src/test/java/: ElGamalAlgorithmTests.java  SignerTests.java
ZIS/lab-18/CryptoSystem/: pom.xml
(+22 files in other folders)
